--- a/LaboratoryServices/InstrumentServicesSupplies.html
+++ b/LaboratoryServices/InstrumentServicesSupplies.html
@@ -55,7 +55,8 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
+                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -216,10 +217,16 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Upholding Exceptional Standards of Accuracy, Efficiency, and Compliance</h5>
-<p>Equipping a clinical laboratory with the appropriate tools and resources is essential for its optimal performance. By leveraging comprehensive instrument and supply management services, clinical labs can uphold high standards of accuracy, efficiency, and compliance, ensuring smooth and effective operations.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Maintaining Superior Accuracy,
+                                Efficiency, and Compliance Standards</h5>
+                            <p>A clinical laboratory must be properly equipped with the right instruments and materials
+                                in order to operate at its best. Through the use of complete instrument and supply
+                                management services, clinical labs are able to maintain high levels of precision,
+                                effectiveness, and compliance, guaranteeing efficient and successful operations.</p>
 
-<p>Below is an in-depth overview of the services commonly provided for instrument and supply management in clinical laboratories by Dynamic IT Healthcare:</p>
+                            <p>An extensive summary of the services Dynamic IT Healthcare frequently offers for
+                                instrument and supply management in clinical laboratories may be found below:
+                            </p>
 
 
                             <div
@@ -691,21 +698,27 @@
                                     <div class="card-body">
                                         <em><u>Requirement Analysis</u></em>
                                         <ol>
-                                            <li><strong>Evaluation</strong>: Assess the laboratory's specific requirements based on the types of tests conducted.</li>
-                                            <li><strong>Budget Planning</strong>: Establish budget limits and prioritize the most critical instruments.</li>
+                                            <li><strong>Evaluation</strong>: Assess the laboratory's specific
+                                                requirements based on the types of tests conducted.</li>
+                                            <li><strong>Budget Planning</strong>: Establish budget limits and prioritize
+                                                the most critical instruments.</li>
                                         </ol>
                                         <em><u>Supplier Selection</u></em>
                                         <ol>
-                                            <li><strong>Research</strong>: Identify reliable vendors and manufacturers.</li>
-                                            <li><strong>Comparison</strong>: Compare the features, prices, and warranties of various instruments.</li>
+                                            <li><strong>Research</strong>: Identify reliable vendors and manufacturers.
+                                            </li>
+                                            <li><strong>Comparison</strong>: Compare the features, prices, and
+                                                warranties of various instruments.</li>
                                         </ol>
                                         <em><u>Acquisition</u></em>
                                         <ol>
-                                            <li><strong>Negotiation</strong>: Negotiate terms and prices with suppliers.</li>
-                                            <li><strong>Ordering</strong>: Place orders and ensure the timely delivery of instruments.</li>
+                                            <li><strong>Negotiation</strong>: Negotiate terms and prices with suppliers.
+                                            </li>
+                                            <li><strong>Ordering</strong>: Place orders and ensure the timely delivery
+                                                of instruments.</li>
                                         </ol>
                                     </div>
-                                    
+
                                 </div>
 
                                 <div class="card collapse border-0" id="instrument-02" data-bs-parent="#instrument">
