--- a/LaboratoryServices/QualityRegulatoryComplianceAuditing.html
+++ b/LaboratoryServices/QualityRegulatoryComplianceAuditing.html
@@ -215,15 +215,12 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Identifying Areas for
-                                Improvement, Ensuring Compliance, and Enhancing Performance</h5>
-                            <p>Quality, regulatory, and compliance auditing are essential practices for ensuring that
-                                clinical laboratories adhere to industry standards, meet regulatory requirements, and
-                                maintain high-quality operations. These audits help identify areas for improvement,
-                                ensure compliance with relevant laws, and enhance overall laboratory performance.</p>
-                            <p> By integrating these auditing practices offered by Dynamic IT Healthcare,
-                                clinical laboratories can ensure they maintain high standards of quality, comply with
-                                regulatory requirements, and manage compliance risks effectively.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Recognizing Opportunities for Improvement, Maintaining Compliance, and Improving Performance
+                            </h5>
+                            <p>Conducting quality, regulatory, and compliance audits is a crucial procedure to guarantee that clinical laboratories maintain high-quality operations, comply with regulatory requirements, and follow industry standards.  These audits aid in pinpointing areas in need of development, guaranteeing adherence to pertinent regulations, and improving overall laboratory performance. </
+                            </p>
+                            <p> Clinical laboratories may make sure they uphold high levels of quality, adhere to regulatory requirements, and efficiently manage compliance risks by incorporating these auditing methods provided by Dynamic IT Healthcare.
+                            </p>
                             <hr>
 
                             <div class="text-center text-lg-start">
