--- a/LaboratoryServices/SoftwareSolutions.html
+++ b/LaboratoryServices/SoftwareSolutions.html
@@ -55,7 +55,8 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
+                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -214,15 +215,12 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Delivering High-Quality
-                                Healthcare Services</h5>
-                            <p>A Laboratory Information System (LIS) is a software solution designed to manage, store,
-                                and process data and workflows in a clinical laboratory. Implementing a Laboratory
-                                Information System (LIS) can significantly enhance the operational efficiency, accuracy,
-                                and compliance of a clinical laboratory.</p>
-                            <p>By carefully considering the key components, benefits, and selection criteria,
-                                laboratories can choose an LIS that best fits their needs and supports their mission of
-                                delivering high-quality healthcare services.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Providing Top-Notch Medical Services
+                            </h5>
+                            <p>A laboratory information system, or LIS, is a software program made to process, store, and manage data and workflows in a clinical laboratory.  A clinical laboratory's operational efficiency, accuracy, and compliance can all be greatly improved by implementing a Laboratory Information System (LIS).
+                            </p>
+                            <p>The finest LIS for laboratories can be selected by carefully weighing the essential elements, advantages, and selection criteria. This will help laboratories fulfill their purpose of providing high-quality healthcare services.
+                            </p>
 
                             <hr>
 
