--- a/ProviderServices/MedicalBilling.html
+++ b/ProviderServices/MedicalBilling.html
@@ -55,7 +55,8 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
+                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -204,15 +205,19 @@
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
                             <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">
-                                End-to-End Medical Billing and Coding Solutions
-                            </h5>
-                            <p>At Dynamic IT Healthcare, we empower our partners with reliable and cost-effective
-                                end-to-end medical billing and coding solutions. Our prime assets are highly skilled
-                                employees and our loyal clients. We are proficient and specialize in working with most
-                                major Medical Billing and Coding Software.</p>
+                                Complete Medical Coding and Billing Solutions
 
-                            <p>Our services are offered as a consolidated package or could be utilized on an on-demand
-                                basis:</p>
+                            </h5>
+                            <p>At Dynamic IT Healthcare, we provide dependable and reasonably priced end-to-end medical
+                                billing and coding solutions to our partners. Our most valuable assets are our devoted
+                                customers and our highly qualified staff. We are skilled and focused on working with the
+                                majority of
+
+                                important software for medical billing and coding.
+                            </p>
+
+                            <p>Our services can be used on an as-needed basis or are provided as a combined package:
+                            </p>
 
                             <ul>
                                 <li><span class="bi bi-check-lg text-green"></span> Eligibility Verification</li>
