--- a/LaboratoryServices/LabStartupServices.html
+++ b/LaboratoryServices/LabStartupServices.html
@@ -55,7 +55,8 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="../Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a></li>
+                                <li class="nav-item"><a href="../Home/WhatMakesUsUnique.html" class="nav-link">Why Us
+                                        Over All?</a></li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="../ProviderServices.html" class="nav-link">Provider Services</a>
                                     <i class="fa-solid fa-angle-down dropdown-toggle" id="ProviderServicesLink"
@@ -216,11 +217,10 @@
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
                             data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Smooth and Compliant Launch </h5>
-                            <p>Starting a laboratory involves several crucial steps, from planning and design to
-                                compliance and operational setup. By partnering with Dynamic IT Healthcare Lab
-                                Start up services, you can ensure a smooth and compliant launch of your laboratory,
-                                setting a solid foundation for future success.</p>
+                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Launching Easily and Compliantly
+                            </h5>
+                            <p>From planning and design to compliance and operational setup, there are a number of important phases involved in starting a laboratory. Through a partnership with Dynamic IT Healthcare Lab Start up services, you can guarantee a seamless and legal laboratory start, laying the groundwork for future success.
+                            </p>
 
                             <div class="accordion accordion-style-02" id="accordion-style-02"
                                 data-active-icon="icon-feather-minus" data-inactive-icon="icon-feather-plus">
