--- a/ProviderServices/SpecialtyMedicalCoding.html
+++ b/ProviderServices/SpecialtyMedicalCoding.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -210,60 +210,42 @@
                                     a free consultation</span>
                                 <div class="contact-form-style-01 mt-0">
                                     <a href="../Home/Contact.html"
-                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Send
-                                        message</a>
+                                        class="btn btn-small btn-round-edge btn-base-color btn-box-shadow mt-20px w-100 text-transform-none">Drop a message</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-8 order-1 order-lg-2 md-mb-50px"
-                            data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Inpatient Procedure Coding with
-                                ICD-10-PCS</h5>
-                            <p>Coding with ICD-10-PCS is the job of specialist coders who are capable of understanding
-                                the surgical anatomy and following aspects:</p>
-                            <ul>
-                                <li><span class="bi bi-check-lg text-green"></span> Basis of surgical procedures such as
-                                    Medical System, Root Operation, Approach, Qualifier and device(s) used</li>
-                            </ul>
-                            <p>All our ICD-10-PCS coders are AHIMA/AAPC certified in ICD-10 systems and help the
-                                surgeons to make appropriate Surgical notes to get the ICD-10-PCS codes to best describe
-                                the actual procedure(s) performed for optimum reimbursement.</p>
+    data-anime='{ "el": "childs", "translateY": [30, 0], "opacity": [0,1], "duration": 600, "delay":0, "staggervalue": 300, "easing": "easeOutQuad" }'>
+    
+    <!-- Inpatient Procedure Coding Section -->
+    <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Inpatient Surgical Procedure Classification with ICD-10-PCS</h5>
+    <p>Coding with ICD-10-PCS requires specialists who possess a deep understanding of surgical anatomy and the following key aspects:</p>
+    <ul>
+        <li><span class="bi bi-check-lg text-green"></span> Surgical procedure fundamentals such as Medical System, Root Operation, Approach, Qualifier, and device(s) used</li>
+    </ul>
+    <p>Our ICD-10-PCS coders are AHIMA/AAPC certified and assist surgeons in creating precise surgical notes to accurately capture ICD-10-PCS codes, ensuring the best possible reimbursement.</p>
 
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Home Health and Hospice Care
-                                Coding</h5>
-                            <p>Home Health Prospective Payment System (HH-PPS) drives the revenue for home-health
-                                agencies (HHA). Our certified and highly experienced Home Health and Outcome and
-                                Assessment Information Set (OASIS) coding specialists help HHAs to comply with following
-                                challenges:</p>
-                            <ul>
-                                <li><span class="bi bi-check-lg text-green"></span> OASIS-C-1 and upcoming OASIS-C-2
-                                    congruency and proving the Medical Necessity of therapy and skilled nursing services
-                                </li>
-                                <li><span class="bi bi-check-lg text-green"></span> Star Rating and Quality Assessments
-                                    Only (QAO) Compliance through judicious use of PBQM/ Outcome-Based Quality
-                                    Improvement (OBQI)</li>
-                                <li><span class="bi bi-check-lg text-green"></span> Easy walk during Recovery Audit
-                                    Contractor (RAC)/ Zone Program Integrity Contractor (ZPIC) audits by minimizing the
-                                    risk of receiving Additional Document Request ADRs</li>
-                            </ul>
+    <!-- Home Health and Hospice Care Coding Section -->
+    <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Home Health and End-of-Life Care Coding</h5>
+    <p>The Home Health Prospective Payment System (HH-PPS) is crucial for home health agencies (HHA) revenue. Our certified and experienced Home Health and Outcome and Assessment Information Set (OASIS) coding specialists guide HHAs through the following challenges:</p>
+    <ul>
+        <li><span class="bi bi-check-lg text-green"></span> Ensuring congruency with OASIS-C-1 and upcoming OASIS-C-2, and demonstrating medical necessity for therapy and skilled nursing services</li>
+        <li><span class="bi bi-check-lg text-green"></span> Compliance with Star Rating and Quality Assessments Only (QAO) using PBQM/Outcome-Based Quality Improvement (OBQI) techniques</li>
+        <li><span class="bi bi-check-lg text-green"></span> Minimizing the risk of Additional Document Requests (ADRs) during Recovery Audit Contractor (RAC)/Zone Program Integrity Contractor (ZPIC) audits</li>
+    </ul>
 
-                            <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Interventional Radiology Coding
-                            </h5>
-                            <p>Our expert and experienced coders process the IVR charts for assigning the codes while
-                                analyzing the complexities of clinical anatomy of cardiovascular circulation including
-                                the aspects of patho-physiology such as:</p>
-                            <ul>
-                                <li><span class="bi bi-check-lg text-green"></span> Families/Orders of the vessels
-                                    accessed and access points</li>
-                                <li><span class="bi bi-check-lg text-green"></span> Locations of the Catheters/Stents
-                                    negotiated</li>
-                                <li><span class="bi bi-check-lg text-green"></span> Other interventions</li>
-                            </ul>
-                            <p>All our IVR coders are Life Science Graduates Certified with credential- Certified
-                                Interventional Radiology Cardiovascular Coder (CIRCC) (AAPC) to make your task easy.</p>
+    <!-- Interventional Radiology Coding Section -->
+    <h5 class="text-dark-gray fw-700 alt-font mb-20px d-block">Cardiovascular Interventional Radiology Coding</h5>
+    <p>Our skilled coders handle IVR charts with expertise, assigning codes while analyzing the complex clinical anatomy of cardiovascular circulation, including pathophysiology aspects such as:</p>
+    <ul>
+        <li><span class="bi bi-check-lg text-green"></span> Families/Orders of the vessels accessed and access points</li>
+        <li><span class="bi bi-check-lg text-green"></span> Locations of Catheters/Stents negotiated</li>
+        <li><span class="bi bi-check-lg text-green"></span> Other interventions</li>
+    </ul>
+    <p>All our IVR coders hold Life Science degrees and are certified with the Certified Interventional Radiology Cardiovascular Coder (CIRCC) credential (AAPC), making your task easier.</p>
 
+</div>
 
-                        </div>
                     </div>
                 </div>
             </section>
