--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
                             <ul class="navbar-nav">
                                 <li class="nav-item"><a href="Home.html" class="nav-link">Home</a></li>
-                                <li class="nav-item"><a href="Home/WhyChooseUs.html" class="nav-link">Why Us Over All?</a>
+                                <li class="nav-item"><a href="Home/WhatMakesUsUnique.html" class="nav-link">Why Us Over All?</a>
                                 </li>
                                 <li class="nav-item dropdown simple-dropdown">
                                     <a href="ProviderServices.html" class="nav-link">Provider Services</a>
